@@ -127,8 +127,7 @@ class ObjectResolver {
 		ClassDescriptor classDescriptor = descriptorResolutionStrategy.descriptorForRow(row);
 
 		// not using DataRow.createObjectId for performance reasons -
-		// ObjectResolver
-		// has all needed metadata already cached.
+		// ObjectResolver has all needed metadata already cached.
 		ObjectId anId = createObjectId(row, classDescriptor.getEntity(), null);
 		return objectFromDataRow(row, anId, classDescriptor);
 	}
