@@ -66,19 +66,18 @@ class EntityRowReader implements RowReader<DataRow> {
             this.converters[i] = converters[startIndex + i];
             types[i] = columns[startIndex + i].getJdbcType();
 
-            // query translator may change the order of fields compare to the
-            // entity
+            // query translator may change the order of fields compare to the entity
             // result, so figure out DataRow labels by doing reverse lookup of
             // RowDescriptor labels...
             if (columns[startIndex + i].getDataRowKey().contains(".")) {
                 // if the dataRowKey contains ".", it is prefetched column and
-                // we can use
-                // it instead of search the name by alias
+                // we can use it instead of search the name by alias
                 labels[i] = columns[startIndex + i].getDataRowKey();
             } else {
                 labels[i] = segmentMetadata.getColumnPath(columns[startIndex + i].getDataRowKey());
             }
         }
+        this.mapCapacity = (int) Math.ceil(segmentWidth / 0.75);
     }
 
     @Override
